# dpedit-rs

./: .prettierrc.cjs  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  cliff.toml  cog.toml  package-lock.json  package.json  project-words.txt  renovate.json  spellcheck.dic
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  cleanup-pr-images.yml  codeql.yml  debug.yml  format.yml  lint-commits.yml  prettier.yml  publish-crate-after-release.yml  release.yml  retag-containers-after-push.yml  retag-containers-after-release.yml  rust.yml  semantic-tags-after-release.yml  semgrep.yml  test-release.yml  yml-lint.yml
crates/dpedit-rs/: Cargo.toml
crates/dpedit-rs/src/: main.rs
src/: main.rs  win32.rs
