[package]
name = "dpedit-rs"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2021"
rust-version = "1.64.0"
authors = ["Kristof Mattei"]
description = "DPEdit-rs"
license-file = "LICENSE"
categories = ["windows", "cli"]
keywords = ["registry", "display", "utility"]
repository = "https://github.com/kristof-mattei/dpedit-r"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
coverage = []

[dependencies]
windows = { version = "0.39.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
