[package]
name = "dpedit-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
include.workspace = true
build = "src/build.rs"

[features]
default = []

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints]
workspace = true
